@@ -14,22 +14,21 @@
 		<format property='JNLP_DATE' pattern='yyyyMMdd_hhmm' locale='en,UK' />
 	</tstamp>
 
-	<!--Build type : 'unstable', 'final' or 'maintenance' -->
+	<!--Build type : 'unstable', 'final', 'pre-release' or 'maintenance' -->
 	<property name='type' value='final' />
 	
 	<!--Distribution release  
 	!!! DO NOT USE '-' CHARACTER IN VERSION !!!-->
-	<property name='version' value='1.9.6' />
+	<property name='version' value='1.10' />
 
 	<!--JNLP version-->
 	<!-- In final releases (including RC), jnlp_version=${version} 
 	In maintenance or unstable daily builds, jnlp_version=${JNLP_DATE} : we don't use regular version 
 	so the version changes each day -->
-	<!--<property name='jnlp_version' value='${JNLP_DATE}' />-->
 	<property name='jnlp_version' value='${version}' />
-
+	
 	<!--Test flag: values: 'test' or 'notest' 
-	'test' for 'unstable branch, 'notest' for master and maintenance branch (including RC releases)
+	'test' for 'unstable' branches, 'notest' for master, pre-release and maintenance branches
 	-->
 	<property name='test' value='notest' />
 				
@@ -557,7 +556,7 @@
 		<taskdef name='jarbundler' classpath='${conf_jarbundler}/${conf_jarbundler-jar}' classname='net.sourceforge.jarbundler.JarBundler' />
 		<echo message='jarbundler' />
 		<mkdir dir='${distdir}/jarbundler/' />
-		<jarbundler dir='${distdir}/jarbundler/' name='Jajuk' mainclass='org.jajuk.Main' icon='${distdir}/dist-files/images/jajuk-icon_source.icns' jvmversion='1.6+' version='${version}' infostring='Jajuk' stubfile='${basedir}/src/packaging/OSX/JavaApplicationStub' build='${version}' vmoptions='-client -Xms20M -Xmx2G -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10' arguments='-${test}' verbose='true'>
+		<jarbundler dir='${distdir}/jarbundler/' name='Jajuk' mainclass='org.jajuk.Main' icon='${distdir}/dist-files/images/jajuk-icon_source.icns' jvmversion='1.6+' version='${version}' infostring='Jajuk' stubfile='${basedir}/src/packaging/OSX/JavaApplicationStub' build='${version}' vmoptions='-client -Xms20M -Xmx2G -XX:MinHeapFreeRatio=5 -XX:MaxHeapFreeRatio=10 -Xverify:none' arguments='-${test}' verbose='true'>
 			<jarfileset dir='${distdir}/lib'>
 				<include name='**/*.jar' />
 			</jarfileset>
